<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_general_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/about_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/about_subtitle" />


    <RelativeLayout
        android:id="@+id/about_developer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/about_developer_1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_developer_1_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_developer_1_name"
            android:autoLink="email"
            android:text="@string/about_developer_1_email" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/about_developer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_developer_1"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/about_developer_2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_developer_2_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_developer_2_name"
            android:autoLink="email"
            android:text="@string/about_developer_2_email" />
    </RelativeLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/about_company_copyright">
    </TextView>
</RelativeLayout>