<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_general_padding"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/departure_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        >

        <ImageButton
            android:id="@+id/current_location"
            android:layout_height="@dimen/button_defined_height"
            android:layout_width="@dimen/button_defined_width"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_my_location_white_24dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/button_current_location"
            />

        <EditText
            android:id="@+id/text_departure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/edit_text_departure"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="@string/edit_text_departure" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/destination_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/departure_block"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        >

        <ImageButton
            android:id="@+id/switch_selection"
            android:layout_height="@dimen/button_defined_height"
            android:layout_width="@dimen/button_defined_width"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_import_export_white_36dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/button_switch_selection" />

        <EditText
            android:id="@+id/text_destination"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/edit_text_destination"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="@string/edit_text_destination"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/destination_block"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/edit_text_time"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="@string/edit_text_time"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_defined_height"
        android:layout_below="@id/input_actions"
        android:background="@color/colorPrimary"
        android:text="@string/action_search"
        android:textColor="@color/colorWhite"
        />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/submit_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <ListView
        android:id="@+id/connection_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/indeterminateBar"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

</RelativeLayout>